--- a/styles/scss/utils/_breakpoints.scss
+++ b/styles/scss/utils/_breakpoints.scss
@@ -27,7 +27,6 @@
 
         &__group {
             width: 160px;
-            gap: 8px;
         }
 
         label {
